<resources>
    <string name="app_name">CuiweiTourism</string>
    <string name="http_notice">网络请求中，请稍后...</string>
    <string name="empty_input">输入不能为空</string>
    <string name="activity_main_home">首页</string>
    <string name="activity_main_sort">分类</string>
    <string name="activity_main_order">订单</string>
    <string name="activity_main_mine">我的</string>
    <string name="tab1_title_phone">400-8888-6666</string>
    <string name="tab1_tablelayout_item1">国内游</string>
    <string name="tab1_tablelayout_item2">出境游</string>
    <string name="tab1_tablelayout_item3">机票</string>
    <string name="tab1_tablelayout_item4">发起活动</string>
    <string name="tab1_tablelayout_item5">火车票</string>
    <string name="tab1_tablelayout_item6">酒店</string>
    <string name="tab1_tablelayout_item7">租车</string>
    <string name="tab1_tablelayout_item8">签证</string>
    <string name="tab1_road">找线路</string>
    <string name="tab1_shop">找商铺</string>
    <string name="tab1_insurance">旅游保险</string>
    <string name="tab1_personalized_custom">个性定制</string>
    <string name="tab1_personalized_custom_notice">一起来定制吧~</string>
    <string name="tab1_hot_activity">热门活动</string>
    <string name="tab1_hot_activity_notice">齐齐来参加~</string>
    <string name="tab1_recommend_for_you">为您推荐</string>
    <string name="tab1_recommend_for_you_notice">带您随意选产品</string>
    <string name="tab1_recommend_for_you_all">全部</string>
    <string name="tab1_recommend_for_you_gny">国内游</string>
    <string name="tab1_recommend_for_you_cjy">出境游</string>
    <string name="tab1_recommend_for_you_zby">周边游</string>
    <string name="tab1_recommend_for_you_title">我最近在使用“驴妈妈旅游”客户端。1元门票随心订，99元周末自驾游，国内出境游超实惠。赶紧来试试吧！我最近在使用“驴妈妈旅游”客户端。1元门票随心订，99元周末自驾游，国内出境游超实惠。赶紧来试试吧！</string>
    <string name="tab1_recommend_argument">讨价还价</string>
    <string name="visa_hot">热门签证国家</string>
    <string name="visa_hot_all_country">查看全部国家和地区</string>
    <string name="visa_hot_any">热门签证</string>
    <string name="visa_deliver">发送材料至我的邮箱</string>
    <string name="car_rent_title">租车</string>
    <string name="car_rent_kind">车型</string>
    <string name="car_rent_kind_kaosite">考斯特</string>
    <string name="car_rent_kind_jinlong">金龙客车</string>
    <string name="car_rent_kind_20">20座</string>
    <string name="car_rent_kind_35">35座</string>
    <string name="car_rent_kind_55">55座</string>
    <string name="car_rent_days">天数</string>
    <string name="car_rent_days_1">1天</string>
    <string name="car_rent_days_2">2天</string>
    <string name="car_rent_from">出发地点</string>
    <string name="car_rent_from_select">请选择出发地点</string>
    <string name="car_rent_to">目的地点</string>
    <string name="car_rent_to_select">请选择目的地点</string>
    <string name="car_rent_period">用车时间</string>
    <string name="car_rent_period_select">请选择用车时间</string>
    <string name="car_rent_next">下一步</string>
    <string name="car_rent_order_price">价格</string>
    <string name="car_rent_order_contact">联系人信息</string>
    <string name="car_rent_order_contact_name">姓名：</string>
    <string name="car_rent_order_contact_tel">手机：</string>
    <string name="car_rent_order_commit_order">提交订单</string>
    <string name="car_rent_success">租车成功</string>
    <string name="car_rent_order_success">订购成功</string>
    <string name="car_rent_order_detail">您的订单情况如下：</string>
    <string name="car_rent_order_number">订单号</string>
    <string name="car_rent_order_time">下单时间</string>
    <string name="car_rent_order_total_price">应付金额</string>
    <string name="car_rent_order_to_pay">去支付</string>
    <string name="tab1_city_selection_title">选择城市</string>
    <string name="tab1_city_selection_recommend">根据您的定位推荐</string>
    <string name="tab1_city_selection_record">历史记录</string>
    <string name="tab1_city_selection_hot">热门城市</string>
    <string name="tab1_city_selection_recommend_city">推荐</string>
    <string name="tab1_city_selection_record_city">历史</string>
    <string name="tab1_city_selection_hot_city">热门</string>
    <string name="tab1_inner_travel_start_time">出发时间</string>
    <string name="tab1_inner_travel_sort_default">默认排序</string>
    <string name="tab1_inner_travel_trip_days">行程天数</string>
    <string name="tab1_inner_travel_price_screen">价格筛选</string>
    <string name="tab1_inner_travel_pop_cancel">取消</string>
    <string name="tab1_inner_travel_pop_clear">清空已选</string>
    <string name="tab1_inner_travel_pop_commit">确定</string>
    <string name="tab1_inner_travel_pop_start_time_1">最早出发</string>
    <string name="tab1_inner_travel_pop_start_time_1_notice">请选择最早出发日期</string>
    <string name="tab1_inner_travel_pop_start_time_2">最晚出发</string>
    <string name="tab1_inner_travel_pop_start_time_2_notice">请选择最晚出发日期</string>
    <string name="tab1_inner_travel_pop_sort_default">默认排序</string>
    <string name="tab1_inner_travel_pop_sort_increase">价格从低到高</string>
    <string name="tab1_inner_travel_pop_sort_decrease">价格从高到低</string>
    <string name="tab1_inner_travel_detail_collection">收藏</string>
    <string name="tab1_inner_travel_detail_share">分享</string>
    <string name="tab1_inner_travel_detail_argument">讨价还价</string>
    <string name="tab1_inner_travel_detail_reservation">立即预定</string>
    <string name="personalized_custom_title">个性定制</string>
    <string name="personalized_custom_start">快来定制</string>
    <string name="personalized_custom_excellent">优秀定制方案</string>
    <string name="personalized_custom_budget">预算￥</string>
    <string name="inner_travel_detail_product">商品详情</string>
    <string name="inner_travel_detail_price">费用说明</string>
    <string name="inner_travel_detail_describe">行程描述</string>
    <string name="inner_travel_detail_notice">预订须知</string>
    <string name="inner_travel_detail_day_one">第一天</string>
    <string name="select_custom_title">选择常用游客</string>
    <string name="visa_data_confirm_notice">我已阅读以下签证材料的要求作为合同要约的一部分，并已清楚了解我需要提供的签证材料，且确保我可以在截止收取材料前提交所需的签证材料到指定地址。</string>
    <string name="visa_data_confirm_material">1999-09-09 19:00截止收取材料，为保证您的正常出游，为审核材料过程中出现的意外情况预留处理时间，请尽早提交签证材料</string>
    <string name="visa_hot_country">热门签证国家</string>
    <string name="visa_hot_country_all">查看全部国家和地区</string>
    <string name="tab2_search_hint">输入你想去的地方</string>
    <string name="tab2_recommend_exchange">换一批</string>
    <string name="tab2_recommend_hot">热门推荐</string>
    <string name="orders_all">全部订单</string>
    <string name="orders_travel">出游订单</string>
    <string name="orders_air">机票订单</string>
    <string name="orders_train">火车票订单</string>
    <string name="orders_hotel">酒店订单</string>
    <string name="orders_rent_car">租车订单</string>
    <string name="orders_activity">活动订单</string>
    <string name="orders_visa">签证订单</string>
    <string name="tab3_order_item_cancel_order">取消订单</string>
    <string name="tab3_order_item_sign_contact">签约付款</string>
    <string name="tab3_order_item_cancel_refund">取消退款</string>
    <string name="tab3_order_item_comment_order">去评价</string>
    <string name="tab3_order_item_refund_order">取消退款</string>
    <string name="tab3_order_item_go_refund_order">退款</string>
    <string name="tab3_order_item_wait_refund">正在退款</string>
    <string name="tab3_order_item_wait_comment">待评价</string>
    <string name="tab3_order_item_already_comment">已完成</string>
    <string name="tab3_order_item_already_cancel">已取消</string>
    <string name="tab3_order_item_already_refund">已退款</string>
    <string name="tab3_order_item_payde">付款成功</string>
    <string name="pay_type_alipay">支付宝支付</string>
    <string name="pay_type_weichatpay">微信支付</string>
    <string name="pay_type_money_unit">待支付金额（元）</string>
    <string name="pay_type_title">翠微收银台</string>
    <string name="fragment_mine_my_travel_money">我的旅游币</string>
    <string name="fragment_mine_login_regist_notice">登录 / 注册</string>
    <string name="fragment_mine_login_notice">已认证</string>
    <string name="fragment_mine_all_orders">全部订单</string>
    <string name="fragment_mine_wait_pay">等待付款</string>
    <string name="fragment_mine_wait_comment">待点评</string>
    <string name="fragment_mine_wait_refund">待退款</string>
    <string name="fragment_mine_my_message">我的消息</string>
    <string name="fragment_mine_my_comment">我的点评</string>
    <string name="fragment_mine_my_collection">我的收藏</string>
    <string name="fragment_mine_my_release">我的发布</string>
    <string name="fragment_mine_personal_data">个人资料</string>
    <string name="fragment_mine_account_security">账户安全</string>
    <string name="fragment_mine_account_certification">账户认证</string>
    <string name="fragment_mine_top_contacts">常用联系人</string>
    <string name="order_refund_title">申请退款</string>
    <string name="order_refund_hint">请填写退款理由</string>
    <string name="order_refund_notice">商家说明：下订单两天内全额退款</string>
    <string name="order_refund_commit">提交</string>
    <string name="order_comment_commit">提交评论</string>
    <string name="order_comment_share">分享你的购买心得</string>
    <string name="user_info_nickname">昵称</string>
    <string name="user_info_gender">性别</string>
    <string name="my_tourism_coin_title">我的旅游币</string>
    <string name="my_tourism_coin_unit">个</string>
    <string name="my_tourism_coin_notice">1旅游币可以兑换一元哦～</string>
    <string name="my_tourism_coin_details">收支明细</string>
    <string name="tab4_account_security_title">账户安全</string>
    <string name="tab4_account_security_password">登录密码</string>
    <string name="tab4_account_security_telephone_authentication">手机验证</string>
    <string name="tab4_account_security_real_name_authentication">实名认证</string>
    <string name="tab4_account_security_exit">退出登录</string>
    <string name="tab4_account_security_modify">修改</string>
    <string name="tab4_account_security_already_certified"> (已认证) </string>
    <string name="tab4_account_security_not_certified"> (未认证) </string>
    <string name="tab4_account_security_go_authentication">去认证</string>
    <string name="tab4_account_security_modify_password_title">修改登录密码</string>
    <string name="tab4_account_security_modify_password_current">当前密码：</string>
    <string name="tab4_account_security_modify_password_current_notice">请输入当前密码</string>
    <string name="tab4_account_security_modify_password_new">新密码：</string>
    <string name="tab4_account_security_modify_password_new_notice">请输入新密码</string>
    <string name="tab4_account_security_modify_password_confirm">再次确认新密码：</string>
    <string name="tab4_account_security_modify_password_confirm_notice">请再次输入新密码</string>
    <string name="tab4_account_security_modify_telephone_title">修改手机</string>
    <string name="tab4_account_security_modify_telephone_number">手机号码：</string>
    <string name="tab4_account_security_modify_telephone_number_new">请输入新手机号码</string>
    <string name="tab4_account_security_modify_telephone_number_verify">请输入短信验证码</string>
    <string name="tab4_account_security_modify_telephone_verification_code">短信验证码：</string>
    <string name="tab4_account_security_modify_telephone_get_verification_code">获取验证码</string>
    <string name="tab4_account_certification_title">账户认证</string>
    <string name="tab4_account_certification_name">真实姓名</string>
    <string name="tab4_account_certification_name_notice">请输入真实姓名</string>
    <string name="tab4_account_certification_phone">手机号码</string>
    <string name="tab4_account_certification_phone_notice">请输入手机号码</string>
    <string name="tab4_account_certification_gender">性别</string>
    <string name="tab4_account_certification_gender_notice">请选择</string>
    <string name="tab4_account_certification_id">身份证号码</string>
    <string name="tab4_account_certification_id_notice">请输入身份证号码</string>
    <string name="tab4_account_certification_real_portrait">真实头像</string>
    <string name="tab4_account_certification_id_front">身份证正面</string>
    <string name="tab4_account_certification_id_back">身份证反面</string>
    <string name="tab4_account_certification_commit">提交</string>
    <string name="tab4_my_collection_delete">删除</string>
    <string name="tab4_my_collection_selection">已选择</string>
    <string name="tab4_my_collection_goods">件商品</string>
</resources>