<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_inner_travel_collection"
        android:paddingLeft="10dp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/tab1_inner_travel_detail_collection"
        android:drawableTop="@mipmap/icon_star"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:drawablePadding="4dp"
        android:background="@android:color/white"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/tv_inner_travel_share"
        android:background="@android:color/white"
        android:paddingRight="10dp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/tab1_inner_travel_detail_share"
        android:drawableTop="@mipmap/icon_share"
        android:paddingTop="4dp"
        android:textSize="12sp"
        />

    <Button
        android:id="@+id/btn_inner_travel_argument"
        android:layout_weight="1.2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/tab1_inner_travel_detail_argument"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_btn_inner_travel_argument_selector"/>

    <Button
        android:id="@+id/btn_inner_travel_reserve"
        android:layout_weight="1.2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/tab1_inner_travel_detail_reservation"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_btn_inner_travel_reservation_selector"
        />
</LinearLayout>
