<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/layout_radio_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/white"
        >
        <LinearLayout
            android:id="@+id/rg_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/rb_1_1"
                android:layout_marginRight="3dp"
                android:background="@drawable/bg_rb_corner_border_selector"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/orders_all"
                android:button="@null"
                android:textColor="@color/color_text_rb_selector"
                />
            <TextView
                android:id="@+id/rb_1_2"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/bg_rb_corner_border_selector"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/orders_travel"
                android:button="@null"
                android:textColor="@color/color_text_rb_selector"
                />
            <TextView
                android:id="@+id/rb_1_3"
                android:background="@drawable/bg_rb_corner_border_selector"
                android:layout_marginLeft="3dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/orders_air"
                android:button="@null"
                android:textColor="@color/color_text_rb_selector"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rg_line2"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/rb_2_1"
                android:textColor="@color/color_text_rb_selector"
                android:background="@drawable/bg_rb_corner_border_selector"
                android:layout_marginRight="3dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/orders_train"
                android:button="@null"
                />
            <TextView
                android:id="@+id/rb_2_2"
                android:textColor="@color/color_text_rb_selector"
                android:background="@drawable/bg_rb_corner_border_selector"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/orders_hotel"
                android:button="@null"
                />
            <TextView
                android:id="@+id/rb_2_3"
                android:textColor="@color/color_text_rb_selector"
                android:background="@drawable/bg_rb_corner_border_selector"
                android:layout_marginLeft="3dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/orders_rent_car"
                android:button="@null"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rg_line3"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            >
            <TextView
                android:id="@+id/rb_3_1"
                android:textColor="@color/color_text_rb_selector"
                android:background="@drawable/bg_rb_corner_border_selector"
                android:layout_marginRight="3dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/orders_activity"
                android:button="@null"
                />
            <TextView
                android:id="@+id/rb_3_2"
                android:textColor="@color/color_text_rb_selector"
                android:background="@drawable/bg_rb_corner_border_selector"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/orders_visa"
                android:button="@null"
                />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_transparent"/>

</LinearLayout>
