<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_my_collection_delete"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    android:visibility="visible"
    android:layout_gravity="bottom"
    android:background="@android:color/white">

    <View
        android:id="@+id/view_collection_line"
        android:layout_width="match_parent"
        android:layout_height="1.2px"
        android:layout_alignParentTop="true"
        android:background="@color/colorLineGray2" />

    <TextView
        android:id="@+id/tv_collection_select_notice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view_collection_line"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:text="@string/tab4_my_collection_selection" />

    <TextView
        android:id="@+id/tv_collection_select_number"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/view_collection_line"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tv_collection_select_notice"
        android:gravity="center_vertical"
        android:text="10"
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/view_collection_line"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tv_collection_select_number"
        android:gravity="center_vertical"
        android:text="@string/tab4_my_collection_goods" />

    <Button
        android:id="@+id/btn_collection_delete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_btn_inner_travel_reservation_selector"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/tab4_my_collection_delete"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>
